--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </p>
                 <div id="inline">
                     <form id="contact" action="#" method="post" name="contact">
-                    <h2>Обратная связь</h2>
+                    <h2 class="headh2">Обратная связь</h2>
                     <input id="name" class="txt" name="name" type="name" placeholder="Ваше имя">
                     <input id="phone" class="txt" name="phone" type="phone" placeholder="Ваш телефон"> 
                     <input id="email" class="txt" name="email" type="email" placeholder="Ваш e-mail"> 
